--- a/workflows/pi_correspondence/final_review_checklist.Rmd
+++ b/workflows/pi_correspondence/final_review_checklist.Rmd
@@ -5,6 +5,11 @@ You can click on the  assessment report on the website to for a general check. F
 
 Send the link over slack for peer review by your fellow datateam members. Usually we look for the following (the list is not exhaustive):
 
+### Special Datasets
+Please refer to the dedicated pages for instructions to handle these cases:
+- [MOSAiC](https://nceas.github.io/datateam-training/reference/MOSAiC.html)
+- [DBO](https://nceas.github.io/datateam-training/reference/distributed-biological-observatory-dbo-submissions.html) 
+
 ### System Metadata
 the format ids are correct
 
