--- a/workflows/data_portals/mosaic.Rmd
+++ b/workflows/data_portals/mosaic.Rmd
@@ -2,15 +2,34 @@
 
 Look out for datasets that are part of the MOSAiC expedition from 2019 -2020. There are a couple of special steps for datasets from this project.
 
-## Data Portal
+**When working MOSAiC datasets:**
 
-The [portal](https://search.dataone.org/portals/mosaic/Data) is on DataONE. Make sure the dataset(s) shows up in the portal after you add the annotations.
+- Will need to find out the `EventId` from the researcher to annotate (`Campaign` can be derived from the `EventId`).
+- There is a custom ontology for the datasets are currently in the [sem-prov-ontologies](https://github.com/DataONEorg/sem-prov-ontologies/blob/main/MOSAiC/MOSAiC.owl) repository but you shouldn't need to use it directly and copy paste from Protoge if the function works.
+- Use `EML::shiny_attributes` only when no annotations have been added. The function does not work well with multiple annotations
+- There are functions in `arcticdatautils` to help with annotating: `mosaic_annotate_dataset` and `mosaic_annotate_attribute`
+- The [portal](https://search.dataone.org/portals/mosaic/Data) is on DataONE. Make sure the dataset(s) show up in the portal after you add the annotations.
 
-### Custom Ontology
+**Here are two fully annotated datasets for reference:**
 
-There is a custom ontology for the datasets (the ontology will be available publicly shortly - for now ask on #datateam for access to the annotations you need). 
+1. https://doi.org/10.18739/A27S7HT3B
+2. https://doi.org/10.18739/A23F4KP3J
+
+The following shows how to add the annotations using `arcticdatautils` and manually in the case the functions fail to work:
 
 #### Dataset Level Annotations
+
+There are 5 main campaigns in the MOSAiC expedition. The main campaigns follow the pattern `PS122/#`.
+
+**arcticdatauitls**
+```{r, eval = F}
+doc$dataset$id <- "your id here"
+doc$dataset$annotation <- NULL #make sure it is empty
+
+doc$dataset$annotation <- mosaic_annotate_dataset(c("PS122/1", "PS122/2"))
+```
+
+**Manual**
 
 Majority of the annotations will be the same across all of the datasets. Pay attention to what needs to be changed for the `hasBasis` and `isPartOfCampaign` valueURIs.
 
@@ -22,54 +41,66 @@ doc$dataset$annotation <- NULL #make sure it is empty here
 
 doc$dataset$annotation <- list(
   #Basis
-  list(propertyURI = list(label = "hasBasis", 
-                          propertyURI = "http://purl.dataone.org/odo/MOSAiC_00000034"), 
-       valueURI = list(label = "Polarstern", # this depends on your event ID, most of them should be Polarstern
-                       valueURI = "http://purl.dataone.org/odo/MOSAiC_00000030")),
+  list(
+    propertyURI = list(label = "hasBasis",
+                       propertyURI = "https://purl.dataone.org/odo/MOSAIC_00000034"),
+    valueURI = list(label = "Polarstern", # this depends on your event ID, most of them should be Polarstern
+                    valueURI = "https://purl.dataone.org/odo/MOSAIC_00000030")
+  ),
   #Project
-  list(propertyURI = list(label = "hasProjectLabel", 
-                          propertyURI = "http://purl.dataone.org/odo/MOSAiC_00000025"), 
-       valueURI = list(label = "MOSAiC20192020", 
-                       valueURI = "http://purl.dataone.org/odo/MOSAiC_00000023")),
-  #Campaign 
-  list(propertyURI = list(label = "isPartOfCampaign", 
-                          propertyURI = "http://purl.dataone.org/odo/MOSAiC_00000032"), 
-       valueURI = list(label = "PS122/2", #*** this changes depending on the leg
-                       valueURI = "http://purl.dataone.org/odo/MOSAiC_00000018")) #*** this changes depending on the leg
+  list(
+    propertyURI = list(label = "hasProjectLabel",
+                       propertyURI = "https://purl.dataone.org/odo/MOSAIC_00000025"),
+    valueURI = list(label = "MOSAiC20192020",
+                    valueURI = "https://purl.dataone.org/odo/MOSAIC_00000023")
+  ),
+  #Campaign
+  list(
+    propertyURI = list(label = "isPartOfCampaign",
+                       propertyURI = "https://purl.dataone.org/odo/MOSAIC_00000032"),
+    valueURI = list(label = "PS122/2", #*** this changes depending on the campaign
+                    valueURI = "https://purl.dataone.org/odo/MOSAIC_00000018")
+  ) #*** this changes depending on the campaign
 )
-```
-
-There are 5 legs in the MOSAiC expedition. They all follow the pattern `PS122/#`. Replace the following for the corresponding leg.
-```{r}
-list(propertyURI = list(label = "isPartOfCampaign", 
-                        propertyURI = "http://purl.dataone.org/odo/MOSAiC_00000032"), 
-     valueURI = list(label = "leg label here", 
-                     valueURI = "leg uri here"))
 ```
 
 #### Entity Level Annotations
 
 Apply these to the attribute level of the dataset. Event IDs should have already be identified earlier on in the dataset review. Check the ticket overview for details.
 
-```{r, eval = F}
-event_annotate <- list(
-  #Event Label
-  list(propertyURI = list(label = "wasGeneratedBy", 
-                          propertyURI = "http://www.w3.org/ns/prov#wasGeneratedBy"), 
-       valueURI = list(label = "PS122/2_14-270", 
-                       valueURI = "http://purl.dataone.org/odo/MOSAiC_00004550")),
-  #Method/Device - Use the long name!
-  list(propertyURI = list(label = "deployedSystem", 
-                          propertyURI = "http://purl.dataone.org/odo/MOSAiC_00002201"), 
-       valueURI = list(label = "Ultra-Wideband Software-defined Microwave Radiometer (0.5-2GHZ)", 
-                       valueURI = "http://purl.dataone.org/odo/MOSAiC_00001163"))
-  
-)
+**arcticdatautils**
 
-doc$dataset$dataTable$attributeList$attribute[[i]]$annotation <- event_annotate
+```{r, eval = F}
+doc$dataset$dataTable[[1]]$attributeList$attribute[[1]]$id <- "some id here"
+doc$dataset$dataTable[[1]]$attributeList$attribute[[1]]$annotation <- mosaic_annotate_attribute("PS122/2_14-270")
 ```
 
-If there are already annotations applied using ECSO, the MOSAiC annotations can be added as so:
+**Manual**
+```{r, eval = F}
+event_annotation <- list(#Event Label
+  list(
+    propertyURI = list(label = "wasGeneratedBy",
+                       propertyURI = "http://www.w3.org/ns/prov#wasGeneratedBy"),
+    valueURI = list(label = "PS122/2_14-270",
+                    valueURI = "https://purl.dataone.org/odo/MOSAIC_00004550")
+  ),
+  #Method/Device - Use the long name!
+  list(
+    propertyURI = list(label = "deployedSystem",
+                       propertyURI = "https://purl.dataone.org/odo/MOSAIC_00002201"),
+    valueURI = list(label = "Ultra-Wideband Software-defined Microwave Radiometer (0.5-2GHZ)",
+                    valueURI = "https://purl.dataone.org/odo/MOSAIC_00001163")
+  ))
+
+doc$dataset$dataTable$attributeList$attribute[[1]]$id <- "eventId"
+doc$dataset$dataTable$attributeList$attribute[[1]]$annotation <-
+  event_annotate
+```
+
+
+**Adding annotations**
+
+If there are already annotations applied (ie. using ECSO), the MOSAiC annotations can be added as so:
 
 1. get the index of all of the attributes we want to add this annotation
 ```{r, eval = F}
@@ -78,8 +109,13 @@ n <- which(stringr::str_detect(eml_get_simple(doc$dataset$dataTable$attributeLis
 
 2. loop through and add the annotation(s)
 ```{r, eval = F}
-for(i in n){
-  doc$dataset$dataTable$attributeList$attribute[[i]]$annotation <- append(list(doc$dataset$dataTable$attributeList$attribute[[i]]$annotation),
-                                                                          event_annotate)
+for(i in n) {
+  doc$dataset$dataTable$attributeList$attribute[[i]]$annotation <-
+    append(
+      list(
+        doc$dataset$dataTable$attributeList$attribute[[i]]$annotation
+      ),
+      event_annotation
+    )
 }
 ```
