--- a/workflows/pi_correspondence/email_templates/A_initial_email_template.Rmd
+++ b/workflows/pi_correspondence/email_templates/A_initial_email_template.Rmd
@@ -143,15 +143,33 @@ We noticed that methods were missing from the submission. Submissions should:
 
 > Comprehensive methods information should be included directly in the metadata record. Pointers or URLs to other sites are unstable.
 
-*A full example - New Submission: Abstract, methods, excel to csv, and attributes*
+*A full example - New Submission: methods, excel to csv, and attributes*
 
-> Thank you for your submission to the Arctic Data Center.  From my preliminary examination of your dataset a few fields need to be updated before we can assign a DOI. 
- 
-> Your abstract appears to be missing some information. We suggest that the abstract be sufficiently descriptive for a general scientific audience. It should provide an overview of the scientific context/ project/ hypotheses, how this data package fits into the larger project, a synopsis of the experimental or sampling design, and a summary of the data contents. If you prefer and it is appropriate, we could add language from the abstract in the NSF Award found here: [INSERT URL]
- 
-> Your methods section appears to be missing some information. Enough detail should be included so that a reasonable scientist can interpret the study and data for reuse without consulting you nor any other resources. This should hold true today, or even decades from now. Users should be able to understand how the data were collected, how to interpret the values, and potentially how to use the data in the case of specialized files. Please edit the data package to provide a more robust methods section. Comprehensive methods information should be included directly in the metadata record. Pointers or URLs to other sites are unstable and insufficient.
+> Thank you for your recent submission to the NSF Arctic Data Center!
 
-> Your submitted data files are in excel format. Please convert your files to a plain text/csv or another open (non-proprietary) format in order to facilitate an accurate transfer of information to users and to ensure preservation of the data in perpetuity.  We can keep your excel files in the dataset, however we recommend at least one version of each file be stored in an open format.
+>From my preliminary examination of your submission I have noticed a few items that I would like to bring to your attention. We are here to help you publish your submission, but your continued assistance is needed to do so. See comments below:
  
-> Please add attribute (column) metadata for your data files.  If any files share the same attributes you only need to enter them once and we will replicate them to the files.  You can add this by navigating to your dataset [INSERT URL], clicking the green “Edit” button, clicking the “Describe” button located to the right of each of your files at the top of the submission page, and in the window that pops up click over to the “Attributes” tab.
+> If there is a publication associated with this dataset, we would appreciate it if you could register the DOI of your published paper with us by using the Citations button right below the title at the dataset landing page. We are working to build our catalog of dataset citations in the Arctic Data Center. This can be added at any point.
+
+> We would like to add some more context to your data package title. I would like to suggest: Holocene lake-based Arctic glacier and ice cap records.
+
+> We noticed that the submitted data files are in xlsx format. Please convert your files to a plain text/csv (or other open format); this helps ensure your data are usable in the long-term.
+ 
+> We also would like to suggest a couple of modifications to the structure of your data. This will others to re-use it most effectively. If the data was in a long rather than wide format, it would be easier to us to document. <some example here>
+
+> Our data submission guidelines page (https://arcticdata.io/submit/) outlines what are best practices for data submissions to the Arctic Data Center. Let us know if you have any questions or if we can be of any help.
+
+> What do the missing values in your measurements represent? A short description of the reason why the values are missing (instrument failure, site not found, etc.) will suffice.
+
+> We noticed that methods were missing from the submission. Submissions should:
+    - provide instrument names (if applicable)
+    - specify how sampling locations were chosen
+    - provide citations for sampling methods that are not explained in detail
+    - any software used to process the data
+
+> After we receive your responses, we can make the edits on your behalf, or you are welcome to make them yourself using our user interface.
+
+> Best,
+
+> Name
 
